@@ -1,3 +1,12 @@
+2018-05-10  Tom Tromey  <tom@tromey.com>
+
+	* psymtab.h (psymtab_storage::obstack): New method.
+	<m_obstack>: Rename from obstack; now private.
+	* psymtab.c (psymtab_storage): Update.
+	* dwarf2read.c (create_addrmap_from_index)
+	(create_addrmap_from_aranges, dwarf2_build_psymtabs_hard):
+	Update.
+
 2018-05-09  Tom Tromey  <tom@tromey.com>
 
 	* symfile.c (reread_symbols): Call objfile->reset_psymtabs.
